# serializer version: 1
# name: test_core_3x1treino_seed17
  list([
    dict({
      'avisos': list([
      ]),
      'blocos': list([
        dict({
          'label': 'A',
          'nomes': list([
            'V-Up',
            'Abd Bicicleta',
          ]),
        }),
        dict({
          'label': 'B',
          'nomes': list([
            'Dead Bug C/ Anilha',
          ]),
        }),
      ]),
      'relaxados': list([
      ]),
      'tipo': 'core(3)',
    }),
  ])
# ---
# name: test_costas_4x1treino_seed9
  list([
    dict({
      'avisos': list([
      ]),
      'blocos': list([
        dict({
          'label': 'A',
          'nomes': list([
            'Remada Baixa Aberta',
            'Remada Baixa Neutra',
          ]),
        }),
        dict({
          'label': 'B',
          'nomes': list([
            'Barra Fixa',
            'Pullover Polia',
          ]),
        }),
      ]),
      'relaxados': list([
      ]),
      'tipo': 'costas(4)',
    }),
  ])
# ---
# name: test_full_body_4treinos_seed1
  list([
    dict({
      'avisos': list([
        dict({
          'escopo': 'adduction',
          'escopo_aviso': 'treino',
          'faltam': 1,
          'familias_usadas': list([
            'Adução Polia',
            'Adução quadril',
            'Copenhagen Adduction',
          ]),
          'nivel': 'padrao',
          'qtd_obtida': 0,
          'qtd_pedida': 1,
          'tipo': 'incompleta',
        }),
        dict({
          'exercicio': 'Supino Com Barra',
          'familia': 'Supino',
          'tipo': 'familia_repetida',
        }),
        dict({
          'escopo': 'rotina',
          'escopo_alocacao': 'abduction',
          'escopo_demanda': 'abduction',
          'faltam': 1,
          'nivel': 'padrao',
          'nivel_alocacao': 'padrao',
          'tipo': 'incompleta',
          'treino_idx': 3,
        }),
        dict({
          'escopo': 'rotina',
          'escopo_alocacao': 'adduction',
          'escopo_demanda': 'adduction',
          'faltam': 1,
          'nivel': 'padrao',
          'nivel_alocacao': 'padrao',
          'tipo': 'incompleta',
          'treino_idx': 3,
        }),
        dict({
          'escopo': 'rotina',
          'escopo_alocacao': 'adduction',
          'escopo_demanda': 'adduction',
          'faltam': 1,
          'nivel': 'padrao',
          'nivel_alocacao': 'padrao',
          'tipo': 'incompleta',
          'treino_idx': 0,
        }),
      ]),
      'blocos': list([
        dict({
          'label': 'A',
          'nomes': list([
            'Lev. Terra',
            'Pullover Halteres',
          ]),
        }),
        dict({
          'label': 'B',
          'nomes': list([
            'Serrote',
            'Hollow Hold',
          ]),
        }),
        dict({
          'label': 'C',
          'nomes': list([
            'Supino Com Barra',
            'Agach. Lateral',
          ]),
        }),
        dict({
          'label': 'D',
          'nomes': list([
            'Desenv. Landmine',
            'Side Clams',
          ]),
        }),
      ]),
      'relaxados': list([
        'Supino Com Barra',
      ]),
      'tipo': 'remadas(1) + puxadas(1) + empurrar_compostos(1) + ombro_composto(1) + squat_unilateral(1) + hinge(1) + abduction(1) + adduction(1) + core_isometrico(1)',
    }),
    dict({
      'avisos': list([
        dict({
          'exercicio': 'Desenvolvimento Smith',
          'familia': 'Desenvolvimento',
          'tipo': 'familia_repetida',
        }),
        dict({
          'exercicio': 'Barra Isométrica',
          'familia': 'Barra',
          'tipo': 'familia_repetida',
        }),
        dict({
          'exercicio': 'Apoio Ajoelhado',
          'familia': 'Apoio',
          'tipo': 'familia_repetida',
        }),
      ]),
      'blocos': list([
        dict({
          'label': 'A',
          'nomes': list([
            'Passada Dos Steps',
            'Remada Apoiado',
          ]),
        }),
        dict({
          'label': 'B',
          'nomes': list([
            'Good Morning',
            'Barra Isométrica',
          ]),
        }),
        dict({
          'label': 'C',
          'nomes': list([
            'Desenvolvimento Smith',
            'Desloc. Lateral c/ Band',
          ]),
        }),
        dict({
          'label': 'D',
          'nomes': list([
            'Apoio Ajoelhado',
            'Copenhagen Adduction',
          ]),
        }),
        dict({
          'label': 'E',
          'nomes': list([
            'Pallof Press',
          ]),
        }),
      ]),
      'relaxados': list([
        'Desenvolvimento Smith',
        'Barra Isométrica',
        'Apoio Ajoelhado',
      ]),
      'tipo': 'remadas(1) + puxadas(1) + empurrar_compostos(1) + ombro_composto(1) + squat_unilateral(1) + hinge(1) + abduction(1) + adduction(1) + core_isometrico(1)',
    }),
    dict({
      'avisos': list([
        dict({
          'exercicio': 'Adução Polia',
          'familia': 'Adução quadril',
          'tipo': 'familia_repetida',
        }),
        dict({
          'exercicio': 'Desenv. Halteres Sentado',
          'familia': 'Desenvolvimento',
          'tipo': 'familia_repetida',
        }),
      ]),
      'blocos': list([
        dict({
          'label': 'A',
          'nomes': list([
            'Desenv. Halteres Sentado',
            'Agachamento Smith',
          ]),
        }),
        dict({
          'label': 'B',
          'nomes': list([
            'Remada Aberta Trx',
            'Adução Polia',
          ]),
        }),
        dict({
          'label': 'C',
          'nomes': list([
            'Puxada Neutra',
            'Dead Bug',
          ]),
        }),
        dict({
          'label': 'D',
          'nomes': list([
            'Supino Com Halteres',
            'Abdução Polia',
          ]),
        }),
        dict({
          'label': 'E',
          'nomes': list([
            'Ponte',
          ]),
        }),
      ]),
      'relaxados': list([
        'Adução Polia',
        'Desenv. Halteres Sentado',
      ]),
      'tipo': 'remadas(1) + puxadas(1) + empurrar_compostos(1) + ombro_composto(1) + squat_bilateral(1) + hinge(1) + abduction(1) + adduction(1) + core_isometrico(1)',
    }),
    dict({
      'avisos': list([
        dict({
          'escopo': 'abduction',
          'escopo_aviso': 'treino',
          'faltam': 1,
          'familias_usadas': list([
            'Abdução Polia',
            'Abdução quadril',
            'Desloc. Lateral c/ Band',
            'Side Clams',
          ]),
          'nivel': 'padrao',
          'qtd_obtida': 0,
          'qtd_pedida': 1,
          'tipo': 'incompleta',
        }),
        dict({
          'escopo': 'adduction',
          'escopo_aviso': 'treino',
          'faltam': 1,
          'familias_usadas': list([
            'Adução Polia',
            'Adução quadril',
            'Copenhagen Adduction',
          ]),
          'nivel': 'padrao',
          'qtd_obtida': 0,
          'qtd_pedida': 1,
          'tipo': 'incompleta',
        }),
      ]),
      'blocos': list([
        dict({
          'label': 'A',
          'nomes': list([
            'Agachamento Búlgaro',
            'Desenvolvimento Barra',
          ]),
        }),
        dict({
          'label': 'B',
          'nomes': list([
            'Barra Fixa',
            'Prancha',
          ]),
        }),
        dict({
          'label': 'C',
          'nomes': list([
            'Remada Curvada Barra',
            'Hip Thrust Uni.',
          ]),
        }),
        dict({
          'label': 'D',
          'nomes': list([
            'Apoio',
          ]),
        }),
      ]),
      'relaxados': list([
      ]),
      'tipo': 'remadas(1) + puxadas(1) + empurrar_compostos(1) + ombro_composto(1) + squat_unilateral(1) + hinge(1) + abduction(1) + adduction(1) + core_isometrico(1)',
    }),
  ])
# ---
# name: test_full_body_4treinos_seed1_HIB2
  list([
    dict({
      'avisos': list([
        dict({
          'escopo': 'adduction',
          'escopo_aviso': 'treino',
          'faltam': 1,
          'familias_usadas': list([
            'Adução Polia',
            'Adução quadril',
            'Copenhagen Adduction',
          ]),
          'nivel': 'padrao',
          'qtd_obtida': 0,
          'qtd_pedida': 1,
          'tipo': 'incompleta',
        }),
        dict({
          'exercicio': 'Supino Com Barra',
          'familia': 'Supino',
          'tipo': 'familia_repetida',
        }),
        dict({
          'escopo': 'rotina',
          'escopo_alocacao': 'abduction',
          'escopo_demanda': 'abduction',
          'faltam': 1,
          'nivel': 'padrao',
          'nivel_alocacao': 'padrao',
          'tipo': 'incompleta',
          'treino_idx': 3,
        }),
        dict({
          'escopo': 'rotina',
          'escopo_alocacao': 'adduction',
          'escopo_demanda': 'adduction',
          'faltam': 1,
          'nivel': 'padrao',
          'nivel_alocacao': 'padrao',
          'tipo': 'incompleta',
          'treino_idx': 3,
        }),
        dict({
          'escopo': 'rotina',
          'escopo_alocacao': 'adduction',
          'escopo_demanda': 'adduction',
          'faltam': 1,
          'nivel': 'padrao',
          'nivel_alocacao': 'padrao',
          'tipo': 'incompleta',
          'treino_idx': 0,
        }),
      ]),
      'blocos': list([
        dict({
          'label': 'A',
          'nomes': list([
            'Lev. Terra',
            'Pullover Halteres',
          ]),
        }),
        dict({
          'label': 'B',
          'nomes': list([
            'Serrote',
            'Hollow Hold',
          ]),
        }),
        dict({
          'label': 'C',
          'nomes': list([
            'Supino Com Barra',
            'Agach. Lateral',
          ]),
        }),
        dict({
          'label': 'D',
          'nomes': list([
            'Desenv. Landmine',
            'Side Clams',
          ]),
        }),
      ]),
      'relaxados': list([
        'Supino Com Barra',
      ]),
      'tipo': 'remadas(1) + puxadas(1) + empurrar_compostos(1) + ombro_composto(1) + squat_unilateral(1) + hinge(1) + abduction(1) + adduction(1) + core_isometrico(1)',
    }),
    dict({
      'avisos': list([
        dict({
          'exercicio': 'Desenvolvimento Smith',
          'familia': 'Desenvolvimento',
          'tipo': 'familia_repetida',
        }),
        dict({
          'exercicio': 'Barra Isométrica',
          'familia': 'Barra',
          'tipo': 'familia_repetida',
        }),
        dict({
          'exercicio': 'Apoio Ajoelhado',
          'familia': 'Apoio',
          'tipo': 'familia_repetida',
        }),
      ]),
      'blocos': list([
        dict({
          'label': 'A',
          'nomes': list([
            'Passada Dos Steps',
            'Remada Apoiado',
          ]),
        }),
        dict({
          'label': 'B',
          'nomes': list([
            'Good Morning',
            'Barra Isométrica',
          ]),
        }),
        dict({
          'label': 'C',
          'nomes': list([
            'Desenvolvimento Smith',
            'Desloc. Lateral c/ Band',
          ]),
        }),
        dict({
          'label': 'D',
          'nomes': list([
            'Apoio Ajoelhado',
            'Copenhagen Adduction',
          ]),
        }),
        dict({
          'label': 'E',
          'nomes': list([
            'Pallof Press',
          ]),
        }),
      ]),
      'relaxados': list([
        'Desenvolvimento Smith',
        'Barra Isométrica',
        'Apoio Ajoelhado',
      ]),
      'tipo': 'remadas(1) + puxadas(1) + empurrar_compostos(1) + ombro_composto(1) + squat_unilateral(1) + hinge(1) + abduction(1) + adduction(1) + core_isometrico(1)',
    }),
    dict({
      'avisos': list([
        dict({
          'exercicio': 'Adução Polia',
          'familia': 'Adução quadril',
          'tipo': 'familia_repetida',
        }),
        dict({
          'exercicio': 'Desenv. Halteres Sentado',
          'familia': 'Desenvolvimento',
          'tipo': 'familia_repetida',
        }),
      ]),
      'blocos': list([
        dict({
          'label': 'A',
          'nomes': list([
            'Desenv. Halteres Sentado',
            'Agachamento Smith',
          ]),
        }),
        dict({
          'label': 'B',
          'nomes': list([
            'Remada Aberta Trx',
            'Adução Polia',
          ]),
        }),
        dict({
          'label': 'C',
          'nomes': list([
            'Puxada Neutra',
            'Dead Bug',
          ]),
        }),
        dict({
          'label': 'D',
          'nomes': list([
            'Supino Com Halteres',
            'Abdução Polia',
          ]),
        }),
        dict({
          'label': 'E',
          'nomes': list([
            'Ponte',
          ]),
        }),
      ]),
      'relaxados': list([
        'Adução Polia',
        'Desenv. Halteres Sentado',
      ]),
      'tipo': 'remadas(1) + puxadas(1) + empurrar_compostos(1) + ombro_composto(1) + squat_bilateral(1) + hinge(1) + abduction(1) + adduction(1) + core_isometrico(1)',
    }),
    dict({
      'avisos': list([
        dict({
          'escopo': 'abduction',
          'escopo_aviso': 'treino',
          'faltam': 1,
          'familias_usadas': list([
            'Abdução Polia',
            'Abdução quadril',
            'Desloc. Lateral c/ Band',
            'Side Clams',
          ]),
          'nivel': 'padrao',
          'qtd_obtida': 0,
          'qtd_pedida': 1,
          'tipo': 'incompleta',
        }),
        dict({
          'escopo': 'adduction',
          'escopo_aviso': 'treino',
          'faltam': 1,
          'familias_usadas': list([
            'Adução Polia',
            'Adução quadril',
            'Copenhagen Adduction',
          ]),
          'nivel': 'padrao',
          'qtd_obtida': 0,
          'qtd_pedida': 1,
          'tipo': 'incompleta',
        }),
      ]),
      'blocos': list([
        dict({
          'label': 'A',
          'nomes': list([
            'Agachamento Búlgaro',
            'Desenvolvimento Barra',
          ]),
        }),
        dict({
          'label': 'B',
          'nomes': list([
            'Barra Fixa',
            'Prancha',
          ]),
        }),
        dict({
          'label': 'C',
          'nomes': list([
            'Remada Curvada Barra',
            'Hip Thrust Uni.',
          ]),
        }),
        dict({
          'label': 'D',
          'nomes': list([
            'Apoio',
          ]),
        }),
      ]),
      'relaxados': list([
      ]),
      'tipo': 'remadas(1) + puxadas(1) + empurrar_compostos(1) + ombro_composto(1) + squat_unilateral(1) + hinge(1) + abduction(1) + adduction(1) + core_isometrico(1)',
    }),
  ])
# ---
# name: test_hinge_2_squat_unilateral_2_seed19
  list([
    dict({
      'avisos': list([
      ]),
      'blocos': list([
        dict({
          'label': 'A',
          'nomes': list([
            'Lev. Terra',
            'Hip Thrust C/ Band',
          ]),
        }),
        dict({
          'label': 'B',
          'nomes': list([
            'Recuo C/ Barra',
          ]),
        }),
        dict({
          'label': 'C',
          'nomes': list([
            'Agachamento Búlgaro',
          ]),
        }),
      ]),
      'relaxados': list([
      ]),
      'tipo': 'hinge(2) + squat(2)',
    }),
  ])
# ---
# name: test_max_complexidade_baixa_seed29
  list([
    dict({
      'avisos': list([
        dict({
          'chave': 'puxadas',
          'escopo': 'costas',
          'escopo_demanda': 'upper',
          'motivo': 'vagas_insuficientes',
          'nivel': 'subregiao',
          'tipo': 'ancora_nao_cumprida',
          'treino_idx': 0,
        }),
      ]),
      'blocos': list([
        dict({
          'label': 'A',
          'nomes': list([
            'Remada Baixa Neutra',
            'Apoio Ajoelhado',
          ]),
        }),
        dict({
          'label': 'B',
          'nomes': list([
            'Desenv. Landmine',
            'Crucifixo Halteres',
          ]),
        }),
      ]),
      'relaxados': list([
      ]),
      'tipo': 'upper(4)',
    }),
  ])
# ---
# name: test_peito_3x2treinos_seed13
  list([
    dict({
      'avisos': list([
        dict({
          'escopo': 'peito',
          'escopo_aviso': 'treino',
          'faltam': 1,
          'familias_usadas': list([
            'Apoio',
            'Apoio Elevado',
            'Crossover',
            'Crucifixo Halteres',
            'Supino',
            'Supino Com Barra',
            'Supino Com Halteres',
            'crossover',
            'crucifixo',
          ]),
          'nivel': 'subregiao',
          'qtd_obtida': 2,
          'qtd_pedida': 3,
          'tipo': 'incompleta',
        }),
        dict({
          'exercicio': 'Supino Com Barra',
          'familia': 'Supino',
          'tipo': 'familia_repetida',
        }),
        dict({
          'escopo': 'rotina',
          'escopo_demanda': 'peito',
          'faltam': 1,
          'motivo': 'banco_filtrado_vazio_apos_relax',
          'nivel': 'subregiao',
          'padrao': 'empurrar_compostos',
          'subregiao': 'peito',
          'tipo': 'ancora_sem_candidatos',
          'treino_idx': 0,
        }),
      ]),
      'blocos': list([
        dict({
          'label': 'A',
          'nomes': list([
            'Supino Com Barra',
            'Apoio Elevado',
          ]),
        }),
      ]),
      'relaxados': list([
        'Supino Com Barra',
      ]),
      'tipo': 'peito(3)',
    }),
    dict({
      'avisos': list([
      ]),
      'blocos': list([
        dict({
          'label': 'A',
          'nomes': list([
            'Supino Com Halteres',
            'Crucifixo Halteres',
          ]),
        }),
        dict({
          'label': 'B',
          'nomes': list([
            'Crossover',
          ]),
        }),
      ]),
      'relaxados': list([
      ]),
      'tipo': 'peito(3)',
    }),
  ])
# ---
# name: test_perna_anterior_3x3treinos_seed3
  list([
    dict({
      'avisos': list([
        dict({
          'exercicio': 'Agachamento Smith',
          'familia': 'Agachamento',
          'tipo': 'familia_repetida',
        }),
      ]),
      'blocos': list([
        dict({
          'label': 'A',
          'nomes': list([
            'Agachamento Búlgaro',
            'Box Jump',
          ]),
        }),
        dict({
          'label': 'B',
          'nomes': list([
            'Agachamento Smith',
          ]),
        }),
      ]),
      'relaxados': list([
        'Agachamento Smith',
      ]),
      'tipo': 'perna_anterior(3)',
    }),
    dict({
      'avisos': list([
      ]),
      'blocos': list([
        dict({
          'label': 'A',
          'nomes': list([
            'Leg Press',
            'Recuo Alternado',
          ]),
        }),
        dict({
          'label': 'B',
          'nomes': list([
            'Agach. Lateral',
          ]),
        }),
      ]),
      'relaxados': list([
      ]),
      'tipo': 'perna_anterior(3)',
    }),
    dict({
      'avisos': list([
      ]),
      'blocos': list([
        dict({
          'label': 'A',
          'nomes': list([
            'Agachamento Livre',
            'Passada',
          ]),
        }),
        dict({
          'label': 'B',
          'nomes': list([
            'Cadeira Extensora',
          ]),
        }),
      ]),
      'relaxados': list([
      ]),
      'tipo': 'perna_anterior(3)',
    }),
  ])
# ---
# name: test_perna_posterior_2x2treinos_seed5
  list([
    dict({
      'avisos': list([
      ]),
      'blocos': list([
        dict({
          'label': 'A',
          'nomes': list([
            'Good Morning',
            'Side Clams',
          ]),
        }),
      ]),
      'relaxados': list([
      ]),
      'tipo': 'perna_posterior(2)',
    }),
    dict({
      'avisos': list([
      ]),
      'blocos': list([
        dict({
          'label': 'A',
          'nomes': list([
            'Hip Thrust',
            'Flexão Joelhos Feijão',
          ]),
        }),
      ]),
      'relaxados': list([
      ]),
      'tipo': 'perna_posterior(2)',
    }),
  ])
# ---
# name: test_template_empurrar_puxar_seed7
  list([
    dict({
      'avisos': list([
        dict({
          'exercicio': 'Desenv. Halteres Uni.',
          'familia': 'desenv uni',
          'tipo': 'familia_repetida',
        }),
        dict({
          'exercicio': 'Desenvolvimento Smith',
          'familia': 'Desenvolvimento',
          'tipo': 'familia_repetida',
        }),
        dict({
          'exercicio': 'Apoio Ajoelhado',
          'familia': 'Apoio',
          'tipo': 'familia_repetida',
        }),
        dict({
          'exercicio': 'Supino Com Anilha',
          'familia': 'Supino',
          'tipo': 'familia_repetida',
        }),
      ]),
      'blocos': list([
        dict({
          'label': 'A',
          'nomes': list([
            'Lev. Terra Sumô',
            'Apoio Ajoelhado',
          ]),
        }),
        dict({
          'label': 'B',
          'nomes': list([
            'Good Morning',
            'Supino Com Anilha',
          ]),
        }),
        dict({
          'label': 'C',
          'nomes': list([
            'Desenvolvimento Smith',
            'Roda Abdominal',
          ]),
        }),
        dict({
          'label': 'D',
          'nomes': list([
            'Desenv. Halteres Uni.',
            'Prancha Alternada',
          ]),
        }),
        dict({
          'label': 'E',
          'nomes': list([
            'Crossover',
            'Abdução Polia',
          ]),
        }),
        dict({
          'label': 'F',
          'nomes': list([
            'Flexão Joelhos Feijão',
            'Tríceps Mergulho Banco',
          ]),
        }),
      ]),
      'relaxados': list([
        'Desenv. Halteres Uni.',
        'Desenvolvimento Smith',
        'Apoio Ajoelhado',
        'Supino Com Anilha',
      ]),
      'tipo': 'empurrar_compostos(2) + empurrar_isolados(1) + ombro_composto(2) + hinge(2) + knee_flexion(1) + abduction(1) + core_isometrico(2) + triceps(1)',
    }),
    dict({
      'avisos': list([
      ]),
      'blocos': list([
        dict({
          'label': 'A',
          'nomes': list([
            'Hip Thrust',
            'Apoio',
          ]),
        }),
        dict({
          'label': 'B',
          'nomes': list([
            'Supino Com Barra',
            'Hiperextensão 45°',
          ]),
        }),
        dict({
          'label': 'C',
          'nomes': list([
            'Desenv. Halteres Sentado',
            'Side Clams',
          ]),
        }),
        dict({
          'label': 'D',
          'nomes': list([
            'Desenv. Landmine',
            'Hollow Hold',
          ]),
        }),
        dict({
          'label': 'E',
          'nomes': list([
            'Crucifixo Halteres',
            'Dead Bug C/ Bola',
          ]),
        }),
        dict({
          'label': 'F',
          'nomes': list([
            'Cadeira Flexora',
            'Tríceps Coice Polia',
          ]),
        }),
      ]),
      'relaxados': list([
      ]),
      'tipo': 'empurrar_compostos(2) + empurrar_isolados(1) + ombro_composto(2) + hinge(2) + knee_flexion(1) + abduction(1) + core_isometrico(2) + triceps(1)',
    }),
  ])
# ---
# name: test_triceps_2_filtro_familia_relax_seed23
  list([
    dict({
      'avisos': list([
      ]),
      'blocos': list([
        dict({
          'label': 'A',
          'nomes': list([
            'Tríceps Coice Polia',
            'Tríceps Corda',
          ]),
        }),
      ]),
      'relaxados': list([
      ]),
      'tipo': 'triceps(2)',
    }),
  ])
# ---
# name: test_upper_3_lower_2_core_2_3treinos_seed42
  list([
    dict({
      'avisos': list([
      ]),
      'blocos': list([
        dict({
          'label': 'A',
          'nomes': list([
            'Hip Thrust',
            'Remada Baixa Neutra',
          ]),
        }),
        dict({
          'label': 'B',
          'nomes': list([
            'Leg Press',
            'Barra Isométrica',
          ]),
        }),
        dict({
          'label': 'C',
          'nomes': list([
            'Remada Aberta Trx',
            'V-Up',
          ]),
        }),
        dict({
          'label': 'D',
          'nomes': list([
            'Hollow Hold',
          ]),
        }),
      ]),
      'relaxados': list([
      ]),
      'tipo': 'upper(3) + lower(2) + core(2)',
    }),
    dict({
      'avisos': list([
        dict({
          'exercicio': 'Supino Com Anilha',
          'familia': 'Supino',
          'tipo': 'familia_repetida',
        }),
      ]),
      'blocos': list([
        dict({
          'label': 'A',
          'nomes': list([
            'Lev. Terra',
            'Apoio Elevado',
          ]),
        }),
        dict({
          'label': 'B',
          'nomes': list([
            'Agachamento Livre',
            'Supino Com Anilha',
          ]),
        }),
        dict({
          'label': 'C',
          'nomes': list([
            'Crossover Sentado',
            'Abd Bicicleta',
          ]),
        }),
        dict({
          'label': 'D',
          'nomes': list([
            'Prancha Alternada',
          ]),
        }),
      ]),
      'relaxados': list([
        'Supino Com Anilha',
      ]),
      'tipo': 'upper(3) + lower(2) + core(2)',
    }),
    dict({
      'avisos': list([
      ]),
      'blocos': list([
        dict({
          'label': 'A',
          'nomes': list([
            'Desenv. Halteres Sentado',
            'Hiperextensão 45°',
          ]),
        }),
        dict({
          'label': 'B',
          'nomes': list([
            'Supino Com Halteres',
            'Canoinha',
          ]),
        }),
        dict({
          'label': 'C',
          'nomes': list([
            'Box Jump',
            'Dead Bug C/ Bola',
          ]),
        }),
        dict({
          'label': 'D',
          'nomes': list([
            'Elevação Frontal Anilha',
          ]),
        }),
      ]),
      'relaxados': list([
      ]),
      'tipo': 'upper(3) + lower(2) + core(2)',
    }),
  ])
# ---
# name: test_upper_3x2treinos_seed11
  list([
    dict({
      'avisos': list([
        dict({
          'chave': 'remadas',
          'escopo': 'costas',
          'escopo_demanda': 'upper',
          'motivo': 'vagas_insuficientes',
          'nivel': 'subregiao',
          'tipo': 'ancora_nao_cumprida',
          'treino_idx': 0,
        }),
        dict({
          'chave': 'remadas',
          'escopo': 'costas',
          'escopo_demanda': 'upper',
          'motivo': 'vagas_insuficientes',
          'nivel': 'subregiao',
          'tipo': 'ancora_nao_cumprida',
          'treino_idx': 1,
        }),
      ]),
      'blocos': list([
        dict({
          'label': 'A',
          'nomes': list([
            'Desenv. Halteres Sentado',
            'Apoio Ajoelhado',
          ]),
        }),
        dict({
          'label': 'B',
          'nomes': list([
            'Pullover Halteres',
          ]),
        }),
      ]),
      'relaxados': list([
      ]),
      'tipo': 'upper(3)',
    }),
    dict({
      'avisos': list([
      ]),
      'blocos': list([
        dict({
          'label': 'A',
          'nomes': list([
            'Supino Com Anilha',
            'Barra Isométrica',
          ]),
        }),
        dict({
          'label': 'B',
          'nomes': list([
            'Crossover',
          ]),
        }),
      ]),
      'relaxados': list([
      ]),
      'tipo': 'upper(3)',
    }),
  ])
# ---
